# ads1015_adc

./: Cargo.toml  Readme.md
examples/: run_adc.rs  run_with_trigger.rs
src/: ads1015_adc.rs  lib.rs
