[package]
name = "ads1015_adc"
version = "0.2.0"
authors = ["Robbie Lamb <lamb@eccentriclamb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rppal = "0.11.3"

[dev-dependencies]
simple-signal = "1.1.1"
